--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Hexa App</title>
 </head>
 <body>
+    <div class="container">
+        <div class="hex-colors">
+            <h1>click the button below to display the hex code of a random color</h1>
+            <h2>The hex-code of the color is #<span id="hex-code">00000</span></h2>
+            <button type="button" class="btn btn-secondary">Secondary</button>
+
+        </div>
+    </div>
    <script src="script.js"></script> 
 </body>
 </html>
