--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="hex-colors">
             <h1>click the button below to display the hex code of a random color</h1>
             <h2>The hex-code of the color is #<span id="hex-code">00000</span></h2>
-            <button type="button" class="btn btn-secondary">Click Me</button>
+            <button onclick="changeColor()" type="button" class="btn btn-secondary">Click Me</button>
 
         </div>
     </div>
